--- a/html_ejemplo/index.html
+++ b/html_ejemplo/index.html
@@ -12,6 +12,7 @@
         <p>¡Hola, mundo!</p>
         <div class="box">
             <p>¡Este es un cuadro de texto!</p>
+            <p>Añado una línea nueva</p>
         </div>
     </div>
 </body>
